# retrieval

./: README.md  docker-compose.yml
postgres/: Dockerfile  postgresql.conf
retrieval/: pyproject.toml
retrieval/docker/: Dockerfile  entrypoint.sh  requirements-dev.txt  requirements.prod.txt
